# schedule_of_training

./: .gitignore  pyproject.toml
app/: __main__.py  events.db  init_db.txt  temp.py
app/database/: connection.py
app/database/models/: base.py  logs.py  roles.py  schedules.py  sport.py  user.py
app/database/repository/: base.py  logs.py  roles.py  schedules.py  sports.py  users.py
app/schemes/: detailedschedule.py  participated.py
app/services/: core.py  user_flow_admin.py  user_flow_coach.py  user_flow_sportsman.py
app/settings/: __init__.py  base.py
app/utils/: get_path.py
tests/: conftest.py
tests/test_db/: base.py  test_sports.py  test_users.py
